@@ -3,6 +3,7 @@
 - Moved extended controls to controls.py.
 - Can now open multiple task properties and new task windows.
 - Moved all logging to util.log().
+- Fixed activity time duration in the tooltip.
 
 2014/12/02 (version 1.41)
 - Pulling tasks in a GUI window, not terminal.
